# stack-builder

./: .gitignore
go/: go.mod  main.go
nodejs/: biome.json  package-lock.json  package.json  readme.md  test.tsx  tsconfig.json
nodejs/source/: app.tsx  cli.tsx  constants.ts
python/: main.py  pyproject.toml
